--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Enter in 8 numbers and click 'Submit' to find their Binary equivalents</p>
-    <input id="NumberInput" typ="text">
+    <input id="user_input" type="text">
     <button id="find">Find Binary</button>
     <p id="Result">
     <script src="app.js"></script>
