setup an alternative solution by following Jason

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <p>Enter in 8 numbers and click 'Submit' to find their Binary equivalents</p>
     <input id="user_input" type="text">
     <button id="find">Find Binary</button>
-    <p id="Result">
+    <p id="answer">
     <script src="app.js"></script>
   </body>
 </html>
